tests/NormalTests/paczka1/small_fuzzy/11377124.err
Error in line 4: A94 A94 84,7
Error in line 5: A94 S836 80,2
Error in line 9: aI4JIP22mUR S442 56,4
Error in line 15: WtO4A S442 36,02
Error in line 14: 8W5c S206 72,5
